turbopack/crates/turbo-tasks-macros-tests/tests/derive_non_local_value/fail_contains_resolved_vc_and_vc.stderr
error[E0277]: the trait bound `Vc<i32>: NonLocalValue` is not satisfied
 --> tests/derive_non_local_value/fail_contains_resolved_vc_and_vc.rs:8:8
  |
8 |     b: Vc<i32>,
  |        ^^^^^^^ the trait `NonLocalValue` is not implemented for `Vc<i32>`
  |
  = help: the following other types implement trait `NonLocalValue`:
            &T
            &mut T
            ()
            (A, Z, Y, X, W, V, U, T)
            (B, A, Z, Y, X, W, V, U, T)
            (C, B, A, Z, Y, X, W, V, U, T)
            (D, C, B, A, Z, Y, X, W, V, U, T)
            (E, D, C, B, A, Z, Y, X, W, V, U, T)
          and $N others
note: required by a bound in `DeriveNonLocalValueAssertion::assert_impl_NonLocalValue`
 --> tests/derive_non_local_value/fail_contains_resolved_vc_and_vc.rs:5:10
  |
5 | #[derive(NonLocalValue)]
  |          ^^^^^^^^^^^^^ required by this bound in `DeriveNonLocalValueAssertion::assert_impl_NonLocalValue`
  = note: this error originates in the derive macro `NonLocalValue` (in Nightly builds, run with -Z macro-backtrace for more info)
