turbopack/crates/turbo-tasks-macros-tests/tests/derive_non_local_value/fail_contains_resolved_vc_and_vc.rs
#![allow(dead_code)]

use turbo_tasks::{NonLocalValue, ResolvedVc, Vc};

#[derive(NonLocalValue)]
struct ContainsResolvedVcAndVc {
    a: ResolvedVc<i32>,
    b: Vc<i32>,
}

fn main() {}
